Improvements on login and settings

--- a/app.json
+++ b/app.json
@@ -16,12 +16,15 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
-    },
+      "edgeToEdgeEnabled": true,
+      "permissions":["CAMERA", "READ_EXTERNAL_STORAGE"]
+    }
+    ,
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+       "permissions":["CAMERA", "READ_EXTERNAL_STORAGE"]
     },
     "plugins": [
       "expo-router",
